# Pa-Nutrinal

./: .gitignore  pyproject.toml  readme.md
client/: client.py  test_client.py
doc/: Errores-conocidos.md  Estructura-del-project.md  Etiquetas.md  datos_de_prueba.md
order/: order.py
seller/: seller.py  test_seller.py
src/backend/nutrinal/: manage.py
src/backend/nutrinal/nutrinal/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/nutrinal/nutrinal/nutrinal_pa/: apps.py
src/backend/nutrinal/nutrinal_pa/: JsonReponse.py  ValidRequest.py  models.py  tests.py  urls.py  views.py
src/backend/nutrinal/nutrinal_pa/migrations/: 0001_initial.py  0002_admin_clientlogin_sellerlogin.py  0003_order_date_update_order_order_date_alter_order_id.py  0004_admin_rol_alter_order_cant_product.py
src/model/: meat.py
src/model/client/: client.py
src/model/order/: order.py
src/model/product/: meat.py  product.py
src/model/production/: meat_production.py  production.py
src/model/seller/: seller.py
src/model/test/: test_client.py  test_product.py
src/product/: product.py
src/production/: MeatProduction.py  meat_production.py  production.py  test_production.py
test/: test_client.py  test_product.py  test_production.py  test_seller.py
