[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"




[project]
name = "PA-Nutrinal"
version = "0.1.0"
requires-python = ">= 3.10"
authors = [
  {name = "Juan Danilo Chamorro Pérez"},
  {name = "Luis Manuel Tejeda Domínguez"},
  {name = "Ken Eduardo Hernández Tamara"},
]
readme = "readme.md"
license = "MIT"
dependencies = [
"pytest==8.3.5",
"build==1.2.2.post1",
"Django==5.2",
"requests==2.32.3"
]

[tool.setuptools]
packages = { find = { where = ["src"], exclude = ["doc"] } }

[tool.pytest.ini_options]
testpaths = [
    "test"
]
pythonpath = [
    "src"
]
